--- a/package.json
+++ b/package.json
@@ -5,21 +5,32 @@
   "version": "0.1.0",
   "author": "Ayush Bendwal <BendwalAyush3@gmail.com>",
   "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.2.1",
+    "babel-plugin-styled-components": "^2.0.2",
     "gatsby": "^4.2.0",
+    "gatsby-plugin-gatsby-cloud": "^4.2.0",
     "gatsby-plugin-image": "^2.2.0",
     "gatsby-plugin-manifest": "^4.2.0",
     "gatsby-plugin-offline": "^5.2.0",
     "gatsby-plugin-react-helmet": "^5.2.0",
     "gatsby-plugin-sharp": "^4.2.0",
+    "gatsby-plugin-styled-components": "^5.2.0",
     "gatsby-source-filesystem": "^4.2.0",
+    "gatsby-theme-material-ui": "^5.1.0",
     "gatsby-transformer-sharp": "^4.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "gatsby-plugin-gatsby-cloud": "^4.2.0"
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@types/node": "^16.11.10",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-helmet": "^6.1.4",
     "prettier": "2.4.1"
   },
   "keywords": [
