--- a/package.json
+++ b/package.json
@@ -8,18 +8,22 @@
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.1",
+    "babel-plugin-polished": "^1.1.0",
     "babel-plugin-styled-components": "^2.0.2",
     "gatsby": "^4.2.0",
     "gatsby-plugin-gatsby-cloud": "^4.2.0",
     "gatsby-plugin-image": "^2.2.0",
     "gatsby-plugin-manifest": "^4.2.0",
     "gatsby-plugin-offline": "^5.2.0",
+    "gatsby-plugin-polished": "^1.0.4",
     "gatsby-plugin-react-helmet": "^5.2.0",
     "gatsby-plugin-sharp": "^4.2.0",
     "gatsby-plugin-styled-components": "^5.2.0",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^4.2.0",
     "gatsby-theme-material-ui": "^5.1.0",
     "gatsby-transformer-sharp": "^4.2.0",
+    "polished": "^4.1.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -31,6 +35,7 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/react-helmet": "^6.1.4",
+    "@types/styled-components": "^5.1.15",
     "prettier": "2.4.1"
   },
   "keywords": [
