--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-offline": "^5.2.0",
     "gatsby-plugin-polished": "^1.0.4",
     "gatsby-plugin-react-helmet": "^5.2.0",
+    "gatsby-plugin-react-svg": "^3.1.0",
     "gatsby-plugin-sharp": "^4.2.0",
     "gatsby-plugin-styled-components": "^5.2.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
