--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.20.5",
     "react-redux": "^7.2.6",
+    "react-scroll": "^1.8.4",
     "styled-components": "^5.3.3",
     "yup": "^0.32.11"
   },
@@ -43,6 +44,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-helmet": "^6.1.4",
     "@types/react-redux": "^7.1.20",
+    "@types/react-scroll": "^1.8.3",
     "@types/styled-components": "^5.1.15",
     "prettier": "2.4.1"
   },
