WEB-17 / Landing Page (#18)
Co-authored-by: Mudit Tiwari <mudittiwari2000@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "noUnusedParameters": true,
     "removeComments": false
   },
-  "include": ["./src/**/*", "gatsby-ssr.js", "src/theme.d.ts"]
+  "include": ["./src/**/*", "gatsby-ssr.js", "src/theme.d.ts", "gatsby-browser.js"]
 }
