--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@hookform/resolvers": "^2.8.3",
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.1",
-    "@reduxjs/toolkit": "^1.6.2",
     "babel-plugin-polished": "^1.1.0",
     "babel-plugin-styled-components": "^2.0.2",
     "gatsby": "^4.2.0",
@@ -27,6 +26,7 @@
     "gatsby-source-filesystem": "^4.2.0",
     "gatsby-theme-material-ui": "^5.1.0",
     "gatsby-transformer-sharp": "^4.2.0",
+    "material-ui-phone-number": "^3.0.0",
     "polished": "^4.1.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
