--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.20.5",
+    "react-otp-input": "^2.4.0",
+    "react-phone-input-2": "^2.14.0",
     "react-redux": "^7.2.6",
     "react-scroll": "^1.8.4",
+    "react-timezone-select": "^1.1.15",
     "styled-components": "^5.3.3",
     "yup": "^0.32.11"
   },
