--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^11.6.0",
     "@hookform/resolvers": "^2.8.3",
     "@mui/icons-material": "^5.2.0",
+    "@mui/lab": "^5.0.0-alpha.60",
     "@mui/material": "^5.2.1",
     "@mui/styles": "^5.2.3",
     "babel-plugin-polished": "^1.1.0",
