--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/styles": "^5.2.3",
     "babel-plugin-polished": "^1.1.0",
     "babel-plugin-styled-components": "^2.0.2",
+    "change-case": "^4.1.2",
     "gatsby": "^4.2.0",
     "gatsby-plugin-gatsby-cloud": "^4.2.0",
     "gatsby-plugin-image": "^2.2.0",
