--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-theme-material-ui": "^5.1.0",
     "gatsby-transformer-sharp": "^4.2.0",
     "material-ui-phone-number": "^3.0.0",
+    "nanoid": "^3.1.30",
     "polished": "^4.1.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
