--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "gatsby-theme-material-ui": "^5.1.0",
     "gatsby-transformer-sharp": "^4.2.0",
     "material-ui-phone-number": "^3.0.0",
-    "moment": "^2.29.1",
     "nanoid": "^3.1.30",
+    "pluralize": "^8.0.0",
     "polished": "^4.1.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@types/node": "^16.11.10",
+    "@types/pluralize": "^0.0.29",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/react-helmet": "^6.1.4",
