--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Ayush Bendwal <BendwalAyush3@gmail.com>",
   "dependencies": {
+    "@date-io/date-fns": "^2.13.1",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@hookform/resolvers": "^2.8.3",
@@ -12,10 +13,13 @@
     "@mui/lab": "^5.0.0-alpha.60",
     "@mui/material": "^5.2.1",
     "@mui/styles": "^5.2.3",
+    "@mui/x-date-pickers": "^5.0.0-alpha.2",
     "babel-plugin-polished": "^1.1.0",
     "babel-plugin-styled-components": "^2.0.2",
     "change-case": "^4.1.2",
+    "date-fns": "^2.28.0",
     "gatsby": "^4.2.0",
+    "gatsby-link": "^4.13.0",
     "gatsby-plugin-gatsby-cloud": "^4.2.0",
     "gatsby-plugin-image": "^2.2.0",
     "gatsby-plugin-manifest": "^4.4.0",
@@ -27,10 +31,12 @@
     "gatsby-plugin-sharp": "^4.2.0",
     "gatsby-plugin-styled-components": "^5.2.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
+    "gatsby-react-router-scroll": "^5.13.0",
     "gatsby-source-filesystem": "^4.2.0",
     "gatsby-theme-material-ui": "^5.1.0",
     "gatsby-transformer-sharp": "^4.2.0",
-    "material-ui-phone-number": "^3.0.0",
+    "mobx": "^6.5.0",
+    "mobx-react-lite": "^3.3.0",
     "nanoid": "^3.1.30",
     "pluralize": "^8.0.0",
     "polished": "^4.1.3",
@@ -41,21 +47,21 @@
     "react-hook-form": "^7.20.5",
     "react-otp-input": "^2.4.0",
     "react-phone-input-2": "^2.14.0",
-    "react-redux": "^7.2.6",
     "react-scroll": "^1.8.4",
     "react-timezone-select": "^1.1.15",
     "styled-components": "^5.3.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.17.9",
     "@types/node": "^16.11.10",
     "@types/pluralize": "^0.0.29",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/react-helmet": "^6.1.4",
-    "@types/react-redux": "^7.1.20",
     "@types/react-scroll": "^1.8.3",
     "@types/styled-components": "^5.1.15",
+    "babel-preset-gatsby": "^2.13.0",
     "prettier": "2.4.1"
   },
   "keywords": [
@@ -69,12 +75,5 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
   }
 }
