--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.20.5",
+    "react-input-mask": "^2.0.4",
     "react-otp-input": "^2.4.0",
     "react-phone-input-2": "^2.14.0",
     "react-scroll": "^1.8.4",
