--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.2.1",
     "@mui/styles": "^5.2.3",
     "@mui/x-date-pickers": "^5.0.0-alpha.2",
+    "axios": "^0.27.2",
     "babel-plugin-polished": "^1.1.0",
     "babel-plugin-styled-components": "^2.0.2",
     "change-case": "^4.1.2",
@@ -35,6 +36,7 @@
     "gatsby-source-filesystem": "^4.2.0",
     "gatsby-theme-material-ui": "^5.1.0",
     "gatsby-transformer-sharp": "^4.2.0",
+    "jsvectormap": "^1.4.5",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.3.0",
     "nanoid": "^3.1.30",
@@ -48,6 +50,7 @@
     "react-input-mask": "^2.0.4",
     "react-otp-input": "^2.4.0",
     "react-phone-input-2": "^2.14.0",
+    "react-query": "^3.38.1",
     "react-scroll": "^1.8.4",
     "react-timezone-select": "^1.1.15",
     "styled-components": "^5.3.3",
