jsvectormap SSR non-comptability fix (#70)

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@hookform/resolvers": "^2.8.3",
+    "@loadable/component": "^5.15.2",
     "@mui/icons-material": "^5.2.0",
     "@mui/lab": "^5.0.0-alpha.60",
     "@mui/material": "^5.2.1",
@@ -58,6 +59,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.17.9",
+    "@types/loadable__component": "^5.13.4",
     "@types/node": "^16.11.10",
     "@types/pluralize": "^0.0.29",
     "@types/react": "^17.0.37",
