--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@mui/material": "^5.2.1",
     "@mui/styles": "^5.2.3",
     "@mui/x-date-pickers": "^5.0.0-alpha.2",
+    "@react-icons/all-files": "^4.1.0",
     "axios": "^0.27.2",
     "babel-plugin-polished": "^1.1.0",
     "babel-plugin-styled-components": "^2.0.2",
     "change-case": "^4.1.2",
+    "country-to-currency": "^1.0.4",
+    "currency-symbol-map": "^5.0.1",
     "date-fns": "^2.28.0",
     "gatsby": "^4.2.0",
     "gatsby-link": "^4.13.0",
