--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@hookform/resolvers": "^2.8.3",
-    "@loadable/component": "^5.15.2",
     "@mui/icons-material": "^5.2.0",
     "@mui/lab": "^5.0.0-alpha.60",
     "@mui/material": "^5.2.1",
@@ -40,13 +39,13 @@
     "gatsby-source-filesystem": "^4.2.0",
     "gatsby-theme-material-ui": "^5.1.0",
     "gatsby-transformer-sharp": "^4.2.0",
-    "jsvectormap": "^1.4.5",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.3.0",
     "nanoid": "^3.1.30",
     "pluralize": "^8.0.0",
     "polished": "^4.1.3",
     "prop-types": "^15.7.2",
+    "query-string": "^7.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
@@ -62,7 +61,6 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.17.9",
-    "@types/loadable__component": "^5.13.4",
     "@types/node": "^16.11.10",
     "@types/pluralize": "^0.0.29",
     "@types/react": "^17.0.37",
