--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-polished": "^1.1.0",
     "babel-plugin-styled-components": "^2.0.2",
     "change-case": "^4.1.2",
+    "country-region-data": "^2.3.0",
     "country-to-currency": "^1.0.4",
     "currency-symbol-map": "^5.0.1",
     "date-fns": "^2.28.0",
@@ -42,6 +43,7 @@
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.3.0",
     "nanoid": "^3.1.30",
+    "notistack": "^2.0.5",
     "pluralize": "^8.0.0",
     "polished": "^4.1.3",
     "prop-types": "^15.7.2",
