--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
       "@/*": ["*"]
     }
   },
-  "include": ["./src/**/*", "gatsby-ssr.js", "gatsby-browser.js"]
+  "include": ["./src/**/*", "gatsby-ssr.tsx", "gatsby-browser.tsx"]
 }
