--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^7.20.5",
+    "react-hook-form": "^7.31.3",
     "react-input-mask": "^2.0.4",
     "react-otp-input": "^2.4.0",
     "react-phone-input-2": "^2.14.0",
@@ -63,6 +63,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.17.9",
+    "@hookform/devtools": "^4.1.0",
     "@types/node": "^16.11.10",
     "@types/pluralize": "^0.0.29",
     "@types/react": "^17.0.37",
