--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@mui/material": "^5.2.1",
     "@mui/styles": "^5.2.3",
     "@mui/x-date-pickers": "^5.0.0-alpha.2",
-    "@react-icons/all-files": "^4.1.0",
     "axios": "^0.27.2",
     "babel-plugin-polished": "^1.1.0",
     "babel-plugin-styled-components": "^2.0.2",
@@ -52,6 +51,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.31.3",
+    "react-icons": "^4.4.0",
     "react-input-mask": "^2.0.4",
     "react-otp-input": "^2.4.0",
     "react-phone-input-2": "^2.14.0",
