Added Clear Icons for Start Time and End Time (#94)
* Added Clear Icons for Start Time and End Time

* CI error fix

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "noUnusedParameters": true,
     "removeComments": false,
     "useDefineForClassFields": true,
+    "allowSyntheticDefaultImports": true,
     "baseUrl": "src",
     "paths": {
       "@/*": ["*"]
