--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,9 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main, stage ]
+    branches: [main, stage]
   pull_request:
-    branches: [ main, stage ]
+    branches: [main, stage]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -25,11 +25,11 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
         with:
-            node-version: '16'
-            cache: 'npm'
+          node-version: "16"
+          cache: "npm"
       # Runs a single command using the runners shell
       - name: npm ci
-        run: npm ci
+        run: npm i -g yarn && yarn install --frozen-lockfile
 
       # Runs a set of commands using the runners shell
       - name: build
