--- a/package.json
+++ b/package.json
@@ -53,9 +53,10 @@
     "react-hook-form": "^7.31.3",
     "react-icons": "^4.4.0",
     "react-otp-input": "^2.4.0",
+    "react-otp-input-rc-17": "^2.4.1-minor",
     "react-phone-input-2": "^2.14.0",
     "react-query": "^3.38.1",
-    "react-scroll": "^1.8.4",
+    "react-scroll": "^1.8.7",
     "react-timezone-select": "^1.1.15",
     "styled-components": "^5.3.3",
     "yup": "^0.32.11"
