No Search Results on Availability Page added (#95)

--- a/amplify.yml
+++ b/amplify.yml
@@ -5,7 +5,7 @@ frontend:
       commands:
         - nvm install 16.13.0
         - nvm use 16.13.0
-        - npm ci
+        - npm i -g yarn && yarn install --frozen-lockfile
     build:
       commands:
         - nvm use 16.13.0
