--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-query": "^3.38.1",
     "react-scroll": "^1.8.7",
     "react-timezone-select": "^1.1.15",
+    "socket.io-client": "^4.5.3",
     "styled-components": "^5.3.3",
     "yup": "^0.32.11"
   },
