--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.2.1",
     "@mui/styles": "^5.2.3",
     "@mui/x-date-pickers": "^5.0.0-alpha.2",
+    "@types/react-sticky-el": "^1.0.3",
     "axios": "^0.27.2",
     "babel-plugin-polished": "^1.1.0",
     "babel-plugin-styled-components": "^2.0.2",
@@ -57,6 +58,7 @@
     "react-phone-input-2": "^2.14.0",
     "react-query": "^3.38.1",
     "react-scroll": "^1.8.7",
+    "react-sticky-el": "^2.0.9",
     "react-timezone-select": "^1.1.15",
     "socket.io-client": "^4.5.3",
     "styled-components": "^5.3.3",
