--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-timezone-select": "^1.1.15",
     "socket.io-client": "^4.5.3",
     "styled-components": "^5.3.3",
+    "use-deep-compare-effect": "^1.8.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
