--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-scroll": "^1.8.7",
     "react-sticky-el": "^2.0.9",
     "react-timezone-select": "^1.1.15",
+    "react-use-websocket": "^4.3.1",
     "socket.io-client": "^4.5.3",
     "styled-components": "^5.3.3",
     "use-deep-compare-effect": "^1.8.1",
