--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gatsby-transformer-sharp": "^4.2.0",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.3.0",
+    "moment": "^2.29.4",
     "nanoid": "^3.1.30",
     "notistack": "^2.0.8",
     "pluralize": "^8.0.0",
